--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2"
   }
 }
