--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
