--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.30.0",
+    "geolib": "^3.3.4",
+    "mapbox-gl": "^2.15.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.25",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "tailwind-scrollbar-hide": "^1.1.7",
